compiler.output
语法

    0 $accept: program $end

    1 program: translation_unit

    2 constant: FLOAT_CONST
    3         | INT_CONST

    4 translation_unit: external_declaration
    5                 | translation_unit external_declaration

    6 external_declaration: function_definition
    7                     | declaration

    8 function_definition: declaration_specifiers declarator compound_statement
    9                    | declaration_specifiers declarator declaration_list compound_statement

   10 declaration_list: declaration
   11                 | declaration_list declaration

   12 declaration: declaration_specifiers SEMICOLON
   13            | declaration_specifiers init_declarator_list SEMICOLON

   14 declaration_specifiers: type_specifier
   15                       | type_specifier declaration_specifiers
   16                       | function_specifier
   17                       | function_specifier declaration_specifiers
   18                       | storage_class_specifier
   19                       | storage_class_specifier declaration_specifiers
   20                       | type_qualifier
   21                       | type_qualifier declaration_specifiers

   22 init_declarator_list: init_declarator
   23                     | init_declarator_list COMMA init_declarator

   24 init_declarator: declarator
   25                | declarator ASSIGN initializer

   26 storage_class_specifier: TYPEDEF
   27                        | EXTERN
   28                        | STATIC
   29                        | AUTO
   30                        | REGISTER

   31 type_specifier: VOID
   32               | INT
   33               | FLOAT
   34               | DOUBLE
   35               | CHAR
   36               | LONG
   37               | SHORT
   38               | SIGNED
   39               | UNSIGNED
   40               | BOOL
   41               | struct_or_union_specifier
   42               | enum_specifier
   43               | TYPEDEF_NAME

   44 struct_or_union_specifier: struct_or_union IDENTIFIER LBRACE struct_declaration_list RBRACE
   45                          | struct_or_union LBRACE struct_declaration_list RBRACE
   46                          | struct_or_union IDENTIFIER

   47 struct_or_union: STRUCT
   48                | UNION

   49 struct_declaration_list: struct_declaration
   50                        | struct_declaration_list struct_declaration

   51 struct_declaration: specifier_qualifier_list struct_declarator_list SEMICOLON
   52                   | error SEMICOLON

   53 specifier_qualifier_list: type_specifier specifier_qualifier_list
   54                         | type_specifier
   55                         | type_qualifier specifier_qualifier_list
   56                         | type_qualifier

   57 struct_declarator_list: struct_declarator
   58                       | struct_declarator_list COMMA struct_declarator

   59 struct_declarator: declarator
   60                  | declarator COLON constant_expression
   61                  | COLON constant_expression

   62 enum_specifier: ENUM IDENTIFIER LBRACE enumerator_list RBRACE
   63               | ENUM LBRACE enumerator_list RBRACE
   64               | ENUM IDENTIFIER LBRACE enumerator_list COMMA RBRACE
   65               | ENUM LBRACE enumerator_list COMMA RBRACE
   66               | ENUM IDENTIFIER

   67 enumerator_list: enumerator
   68                | enumerator_list COMMA enumerator

   69 enumerator: IDENTIFIER
   70           | IDENTIFIER ASSIGN constant_expression

   71 type_qualifier: CONST
   72               | RESTRICT
   73               | VOLATILE

   74 function_specifier: INLINE

   75 declarator: direct_declarator
   76           | pointer direct_declarator

   77 direct_declarator: IDENTIFIER
   78                  | LPAREN declarator RPAREN
   79                  | direct_declarator LBRACKET type_qualifier_list assignment_expression RBRACKET
   80                  | direct_declarator LBRACKET type_qualifier_list RBRACKET
   81                  | direct_declarator LBRACKET STATIC type_qualifier_list assignment_expression RBRACKET
   82                  | direct_declarator LBRACKET STATIC assignment_expression RBRACKET
   83                  | direct_declarator LBRACKET type_qualifier_list STATIC assignment_expression RBRACKET
   84                  | direct_declarator LBRACKET type_qualifier_list MUL RBRACKET
   85                  | direct_declarator LBRACKET MUL RBRACKET
   86                  | direct_declarator LPAREN parameter_type_list RPAREN
   87                  | direct_declarator LPAREN identifier_list RPAREN
   88                  | direct_declarator LPAREN RPAREN

   89 pointer: MUL type_qualifier_list
   90        | MUL
   91        | MUL type_qualifier_list pointer
   92        | MUL pointer

   93 type_qualifier_list: type_qualifier
   94                    | type_qualifier_list type_qualifier

   95 parameter_type_list: parameter_list COMMA ELLIPSIS
   96                    | parameter_list

   97 parameter_list: parameter_declaration
   98               | parameter_list COMMA parameter_declaration

   99 parameter_declaration: declaration_specifiers declarator
  100                      | declaration_specifiers abstract_declarator
  101                      | declaration_specifiers

  102 identifier_list: IDENTIFIER
  103                | identifier_list COMMA IDENTIFIER

  104 type_name: specifier_qualifier_list abstract_declarator
  105          | specifier_qualifier_list

  106 abstract_declarator: pointer direct_abstract_declarator
  107                    | direct_abstract_declarator
  108                    | pointer

  109 direct_abstract_declarator: LPAREN abstract_declarator RPAREN
  110                           | direct_abstract_declarator LBRACKET assignment_expression RBRACKET
  111                           | direct_abstract_declarator LBRACKET RBRACKET
  112                           | direct_abstract_declarator LBRACKET MUL RBRACKET
  113                           | direct_abstract_declarator LPAREN parameter_type_list RPAREN
  114                           | direct_abstract_declarator LPAREN RPAREN

  115 initializer: assignment_expression
  116            | LBRACE initializer_list RBRACE
  117            | LBRACE initializer_list COMMA RBRACE

  118 initializer_list: designation initializer
  119                 | initializer
  120                 | initializer_list COMMA designation initializer
  121                 | initializer_list COMMA initializer

  122 designation: designator_list ASSIGN

  123 designator_list: designator
  124                | declaration_list designator

  125 designator: LBRACKET constant_expression RBRACKET
  126           | DOT IDENTIFIER

  127 primary_expression: IDENTIFIER
  128                   | constant
  129                   | STRING
  130                   | LPAREN expression RPAREN

  131 postfix_expression: primary_expression
  132                   | postfix_expression LBRACKET expression RBRACKET
  133                   | postfix_expression LPAREN RPAREN
  134                   | postfix_expression LPAREN argument_expression_list RPAREN
  135                   | postfix_expression DOT IDENTIFIER
  136                   | postfix_expression PTR IDENTIFIER
  137                   | postfix_expression INC
  138                   | postfix_expression DEC
  139                   | LPAREN type_name RPAREN LBRACE initializer_list RBRACE
  140                   | LPAREN type_name RPAREN LBRACE initializer_list COMMA RBRACE

  141 argument_expression_list: assignment_expression
  142                         | argument_expression_list COMMA assignment_expression

  143 unary_expression: postfix_expression
  144                 | INC unary_expression
  145                 | DEC unary_expression
  146                 | unary_operator cast_expression
  147                 | SIZEOF unary_expression
  148                 | SIZEOF LPAREN type_name RPAREN

  149 unary_operator: BIT_AND
  150               | MUL
  151               | ADD
  152               | SUB
  153               | NEGATION
  154               | NOT

  155 cast_expression: unary_expression
  156                | LPAREN type_name RPAREN cast_expression

  157 multiplicative_expression: cast_expression
  158                          | multiplicative_expression MUL cast_expression
  159                          | multiplicative_expression DIV cast_expression
  160                          | multiplicative_expression MOD cast_expression

  161 additive_expression: multiplicative_expression
  162                    | additive_expression ADD multiplicative_expression
  163                    | additive_expression SUB multiplicative_expression

  164 shift_expression: additive_expression
  165                 | shift_expression SHIFT_LEFT additive_expression
  166                 | shift_expression SHIFT_RIGHT additive_expression

  167 relational_expression: shift_expression
  168                      | relational_expression LT shift_expression
  169                      | relational_expression GT shift_expression
  170                      | relational_expression LE shift_expression
  171                      | relational_expression GE shift_expression

  172 equality_expression: relational_expression
  173                    | equality_expression EQ relational_expression
  174                    | equality_expression NE relational_expression

  175 and_expression: equality_expression
  176               | and_expression BIT_AND equality_expression

  177 exclusive_or_expression: and_expression
  178                        | exclusive_or_expression BIT_XOR and_expression

  179 inclusive_or_expression: exclusive_or_expression
  180                        | inclusive_or_expression BIT_OR exclusive_or_expression

  181 logical_and_expression: inclusive_or_expression
  182                       | logical_and_expression AND inclusive_or_expression

  183 logical_or_expression: logical_and_expression
  184                      | logical_or_expression OR logical_and_expression

  185 conditional_expression: logical_or_expression
  186                       | logical_or_expression QM expression COLON conditional_expression

  187 assignment_expression: conditional_expression
  188                      | unary_expression assignment_operator assignment_expression

  189 assignment_operator: ASSIGN
  190                    | MUL_ASSIGN
  191                    | DIV_ASSIGN
  192                    | MOD_ASSIGN
  193                    | ADD_ASSIGN
  194                    | SUB_ASSIGN
  195                    | SHIFT_LEFT_ASSIGN
  196                    | SHIFT_RIGHT_ASSIGN
  197                    | AND_ASSIGN
  198                    | XOR_ASSIGN
  199                    | OR_ASSIGN

  200 expression: assignment_expression
  201           | expression COMMA assignment_expression

  202 constant_expression: conditional_expression

  203 statement: compound_statement
  204          | expression_statement
  205          | selection_statement
  206          | iteration_statement
  207          | jump_statement
  208          | labeled_statement

  209 labeled_statement: IDENTIFIER COLON statement
  210                  | CASE constant_expression COLON statement
  211                  | DEFAULT COLON statement

  212 compound_statement: LBRACE RBRACE
  213                   | LBRACE block_item_list RBRACE

  214 block_item_list: block_item
  215                | block_item_list block_item

  216 block_item: declaration
  217           | statement

  218 expression_statement: expression SEMICOLON
  219                     | SEMICOLON
  220                     | error SEMICOLON

  221 selection_statement: IF LPAREN expression RPAREN statement
  222                    | IF LPAREN expression RPAREN statement ELSE statement
  223                    | SWITCH LPAREN expression RPAREN statement

  224 iteration_statement: WHILE LPAREN expression RPAREN statement
  225                    | DO statement WHILE LPAREN expression RPAREN
  226                    | FOR LPAREN expression_statement expression_statement RPAREN statement
  227                    | FOR LPAREN expression_statement expression_statement expression RPAREN statement
  228                    | error RPAREN

  229 jump_statement: CONTINUE SEMICOLON
  230               | BREAK SEMICOLON
  231               | RETURN SEMICOLON
  232               | RETURN expression SEMICOLON
  233               | GOTO IDENTIFIER SEMICOLON


Terminals, with rules where they appear

$end (0) 0
error (256) 52 220 228
CASE (258) 210
DEFAULT (259) 211
IF (260) 221 222
ELSE (261) 222
SWITCH (262) 223
WHILE (263) 224 225
DO (264) 225
FOR (265) 226 227
GOTO (266) 233
CONTINUE (267) 229
BREAK (268) 230
RETURN (269) 231 232
SIZEOF (270) 147 148
INT_CONST (271) 3
FLOAT_CONST (272) 2
IDENTIFIER (273) 44 46 62 64 66 69 70 77 102 103 126 127 135 136 209
    233
STRING (274) 129
ADD (275) 151 162
SUB (276) 152 163
MUL (277) 84 85 89 90 91 92 112 150 158
DIV (278) 159
BIT_XOR (279) 178
LPAREN (280) 78 86 87 88 109 113 114 130 133 134 139 140 148 156 221
    222 223 224 225 226 227
RPAREN (281) 78 86 87 88 109 113 114 130 133 134 139 140 148 156 221
    222 223 224 225 226 227 228
SEMICOLON (282) 12 13 51 52 218 219 220 229 230 231 232 233
ELLIPSIS (283) 95
SHIFT_RIGHT (284) 166
SHIFT_LEFT (285) 165
INC (286) 137 144
DEC (287) 138 145
PTR (288) 136
AND (289) 182
OR (290) 184
LE (291) 170
GE (292) 171
EQ (293) 173
NE (294) 174
LBRACE (295) 44 45 62 63 64 65 116 117 139 140 212 213
RBRACE (296) 44 45 62 63 64 65 116 117 139 140 212 213
COMMA (297) 23 58 64 65 68 95 98 103 117 120 121 140 142 201
COLON (298) 60 61 186 209 210 211
ASSIGN (299) 25 70 122 189
LBRACKET (300) 79 80 81 82 83 84 85 110 111 112 125 132
RBRACKET (301) 79 80 81 82 83 84 85 110 111 112 125 132
DOT (302) 126 135
BIT_AND (303) 149 176
NOT (304) 154
NEGATION (305) 153
MOD (306) 160
LT (307) 168
GT (308) 169
BIT_OR (309) 180
QM (310) 186
SHIFT_LEFT_ASSIGN (311) 195
SHIFT_RIGHT_ASSIGN (312) 196
AND_ASSIGN (313) 197
MUL_ASSIGN (314) 190
DIV_ASSIGN (315) 191
MOD_ASSIGN (316) 192
ADD_ASSIGN (317) 193
SUB_ASSIGN (318) 194
XOR_ASSIGN (319) 198
OR_ASSIGN (320) 199
TYPEDEF_NAME (321) 43
TYPEDEF (322) 26
EXTERN (323) 27
STATIC (324) 28 81 82 83
AUTO (325) 29
REGISTER (326) 30
INLINE (327) 74
CONST (328) 71
RESTRICT (329) 72
VOLATILE (330) 73
BOOL (331) 40
CHAR (332) 35
SHORT (333) 37
INT (334) 32
LONG (335) 36
SIGNED (336) 38
UNSIGNED (337) 39
FLOAT (338) 33
DOUBLE (339) 34
VOID (340) 31
STRUCT (341) 47
UNION (342) 48
ENUM (343) 62 63 64 65 66


Nonterminals, with rules where they appear

$accept (89)
    左： 0
program (90)
    左： 1, 右： 0
constant (91)
    左： 2 3, 右： 128
translation_unit (92)
    左： 4 5, 右： 1 5
external_declaration (93)
    左： 6 7, 右： 4 5
function_definition (94)
    左： 8 9, 右： 6
declaration_list (95)
    左： 10 11, 右： 9 11 124
declaration (96)
    左： 12 13, 右： 7 10 11 216
declaration_specifiers (97)
    左： 14 15 16 17 18 19 20 21, 右： 8 9 12 13 15 17 19 21 99
    100 101
init_declarator_list (98)
    左： 22 23, 右： 13 23
init_declarator (99)
    左： 24 25, 右： 22 23
storage_class_specifier (100)
    左： 26 27 28 29 30, 右： 18 19
type_specifier (101)
    左： 31 32 33 34 35 36 37 38 39 40 41 42 43, 右： 14 15 53
    54
struct_or_union_specifier (102)
    左： 44 45 46, 右： 41
struct_or_union (103)
    左： 47 48, 右： 44 45 46
struct_declaration_list (104)
    左： 49 50, 右： 44 45 50
struct_declaration (105)
    左： 51 52, 右： 49 50
specifier_qualifier_list (106)
    左： 53 54 55 56, 右： 51 53 55 104 105
struct_declarator_list (107)
    左： 57 58, 右： 51 58
struct_declarator (108)
    左： 59 60 61, 右： 57 58
enum_specifier (109)
    左： 62 63 64 65 66, 右： 42
enumerator_list (110)
    左： 67 68, 右： 62 63 64 65 68
enumerator (111)
    左： 69 70, 右： 67 68
type_qualifier (112)
    左： 71 72 73, 右： 20 21 55 56 93 94
function_specifier (113)
    左： 74, 右： 16 17
declarator (114)
    左： 75 76, 右： 8 9 24 25 59 60 78 99
direct_declarator (115)
    左： 77 78 79 80 81 82 83 84 85 86 87 88, 右： 75 76 79 80
    81 82 83 84 85 86 87 88
pointer (116)
    左： 89 90 91 92, 右： 76 91 92 106 108
type_qualifier_list (117)
    左： 93 94, 右： 79 80 81 83 84 89 91 94
parameter_type_list (118)
    左： 95 96, 右： 86 113
parameter_list (119)
    左： 97 98, 右： 95 96 98
parameter_declaration (120)
    左： 99 100 101, 右： 97 98
identifier_list (121)
    左： 102 103, 右： 87 103
type_name (122)
    左： 104 105, 右： 139 140 148 156
abstract_declarator (123)
    左： 106 107 108, 右： 100 104 109
direct_abstract_declarator (124)
    左： 109 110 111 112 113 114, 右： 106 107 110 111 112 113
    114
initializer (125)
    左： 115 116 117, 右： 25 118 119 120 121
initializer_list (126)
    左： 118 119 120 121, 右： 116 117 120 121 139 140
designation (127)
    左： 122, 右： 118 120
designator_list (128)
    左： 123 124, 右： 122
designator (129)
    左： 125 126, 右： 123 124
primary_expression (130)
    左： 127 128 129 130, 右： 131
postfix_expression (131)
    左： 131 132 133 134 135 136 137 138 139 140, 右： 132 133
    134 135 136 137 138 143
argument_expression_list (132)
    左： 141 142, 右： 134 142
unary_expression (133)
    左： 143 144 145 146 147 148, 右： 144 145 147 155 188
unary_operator (134)
    左： 149 150 151 152 153 154, 右： 146
cast_expression (135)
    左： 155 156, 右： 146 156 157 158 159 160
multiplicative_expression (136)
    左： 157 158 159 160, 右： 158 159 160 161 162 163
additive_expression (137)
    左： 161 162 163, 右： 162 163 164 165 166
shift_expression (138)
    左： 164 165 166, 右： 165 166 167 168 169 170 171
relational_expression (139)
    左： 167 168 169 170 171, 右： 168 169 170 171 172 173 174
equality_expression (140)
    左： 172 173 174, 右： 173 174 175 176
and_expression (141)
    左： 175 176, 右： 176 177 178
exclusive_or_expression (142)
    左： 177 178, 右： 178 179 180
inclusive_or_expression (143)
    左： 179 180, 右： 180 181 182
logical_and_expression (144)
    左： 181 182, 右： 182 183 184
logical_or_expression (145)
    左： 183 184, 右： 184 185 186
conditional_expression (146)
    左： 185 186, 右： 186 187 202
assignment_expression (147)
    左： 187 188, 右： 79 81 82 83 110 115 141 142 188 200 201
assignment_operator (148)
    左： 189 190 191 192 193 194 195 196 197 198 199, 右： 188
expression (149)
    左： 200 201, 右： 130 132 186 201 218 221 222 223 224 225
    227 232
constant_expression (150)
    左： 202, 右： 60 61 70 125 210
statement (151)
    左： 203 204 205 206 207 208, 右： 209 210 211 217 221 222
    223 224 225 226 227
labeled_statement (152)
    左： 209 210 211, 右： 208
compound_statement (153)
    左： 212 213, 右： 8 9 203
block_item_list (154)
    左： 214 215, 右： 213 215
block_item (155)
    左： 216 217, 右： 214 215
expression_statement (156)
    左： 218 219 220, 右： 204 226 227
selection_statement (157)
    左： 221 222 223, 右： 205
iteration_statement (158)
    左： 224 225 226 227 228, 右： 206
jump_statement (159)
    左： 229 230 231 232 233, 右： 207


State 0

    0 $accept: . program $end

    TYPEDEF_NAME  shift, and go to state 1
    TYPEDEF       shift, and go to state 2
    EXTERN        shift, and go to state 3
    STATIC        shift, and go to state 4
    AUTO          shift, and go to state 5
    REGISTER      shift, and go to state 6
    INLINE        shift, and go to state 7
    CONST         shift, and go to state 8
    RESTRICT      shift, and go to state 9
    VOLATILE      shift, and go to state 10
    BOOL          shift, and go to state 11
    CHAR          shift, and go to state 12
    SHORT         shift, and go to state 13
    INT           shift, and go to state 14
    LONG          shift, and go to state 15
    SIGNED        shift, and go to state 16
    UNSIGNED      shift, and go to state 17
    FLOAT         shift, and go to state 18
    DOUBLE        shift, and go to state 19
    VOID          shift, and go to state 20
    STRUCT        shift, and go to state 21
    UNION         shift, and go to state 22
    ENUM          shift, and go to state 23

    program                    转到状态 24
    translation_unit           转到状态 25
    external_declaration       转到状态 26
    function_definition        转到状态 27
    declaration                转到状态 28
    declaration_specifiers     转到状态 29
    storage_class_specifier    转到状态 30
    type_specifier             转到状态 31
    struct_or_union_specifier  转到状态 32
    struct_or_union            转到状态 33
    enum_specifier             转到状态 34
    type_qualifier             转到状态 35
    function_specifier         转到状态 36


State 1

   43 type_specifier: TYPEDEF_NAME .

    $default  reduce using rule 43 (type_specifier)


State 2

   26 storage_class_specifier: TYPEDEF .

    $default  reduce using rule 26 (storage_class_specifier)


State 3

   27 storage_class_specifier: EXTERN .

    $default  reduce using rule 27 (storage_class_specifier)


State 4

   28 storage_class_specifier: STATIC .

    $default  reduce using rule 28 (storage_class_specifier)


State 5

   29 storage_class_specifier: AUTO .

    $default  reduce using rule 29 (storage_class_specifier)


State 6

   30 storage_class_specifier: REGISTER .

    $default  reduce using rule 30 (storage_class_specifier)


State 7

   74 function_specifier: INLINE .

    $default  reduce using rule 74 (function_specifier)


State 8

   71 type_qualifier: CONST .

    $default  reduce using rule 71 (type_qualifier)


State 9

   72 type_qualifier: RESTRICT .

    $default  reduce using rule 72 (type_qualifier)


State 10

   73 type_qualifier: VOLATILE .

    $default  reduce using rule 73 (type_qualifier)


State 11

   40 type_specifier: BOOL .

    $default  reduce using rule 40 (type_specifier)


State 12

   35 type_specifier: CHAR .

    $default  reduce using rule 35 (type_specifier)


State 13

   37 type_specifier: SHORT .

    $default  reduce using rule 37 (type_specifier)


State 14

   32 type_specifier: INT .

    $default  reduce using rule 32 (type_specifier)


State 15

   36 type_specifier: LONG .

    $default  reduce using rule 36 (type_specifier)


State 16

   38 type_specifier: SIGNED .

    $default  reduce using rule 38 (type_specifier)


State 17

   39 type_specifier: UNSIGNED .

    $default  reduce using rule 39 (type_specifier)


State 18

   33 type_specifier: FLOAT .

    $default  reduce using rule 33 (type_specifier)


State 19

   34 type_specifier: DOUBLE .

    $default  reduce using rule 34 (type_specifier)


State 20

   31 type_specifier: VOID .

    $default  reduce using rule 31 (type_specifier)


State 21

   47 struct_or_union: STRUCT .

    $default  reduce using rule 47 (struct_or_union)


State 22

   48 struct_or_union: UNION .

    $default  reduce using rule 48 (struct_or_union)


State 23

   62 enum_specifier: ENUM . IDENTIFIER LBRACE enumerator_list RBRACE
   63               | ENUM . LBRACE enumerator_list RBRACE
   64               | ENUM . IDENTIFIER LBRACE enumerator_list COMMA RBRACE
   65               | ENUM . LBRACE enumerator_list COMMA RBRACE
   66               | ENUM . IDENTIFIER

    IDENTIFIER  shift, and go to state 37
    LBRACE      shift, and go to state 38


State 24

    0 $accept: program . $end

    $end  shift, and go to state 39


State 25

    1 program: translation_unit .
    5 translation_unit: translation_unit . external_declaration

    TYPEDEF_NAME  shift, and go to state 1
    TYPEDEF       shift, and go to state 2
    EXTERN        shift, and go to state 3
    STATIC        shift, and go to state 4
    AUTO          shift, and go to state 5
    REGISTER      shift, and go to state 6
    INLINE        shift, and go to state 7
    CONST         shift, and go to state 8
    RESTRICT      shift, and go to state 9
    VOLATILE      shift, and go to state 10
    BOOL          shift, and go to state 11
    CHAR          shift, and go to state 12
    SHORT         shift, and go to state 13
    INT           shift, and go to state 14
    LONG          shift, and go to state 15
    SIGNED        shift, and go to state 16
    UNSIGNED      shift, and go to state 17
    FLOAT         shift, and go to state 18
    DOUBLE        shift, and go to state 19
    VOID          shift, and go to state 20
    STRUCT        shift, and go to state 21
    UNION         shift, and go to state 22
    ENUM          shift, and go to state 23

    $default  reduce using rule 1 (program)

    external_declaration       转到状态 40
    function_definition        转到状态 27
    declaration                转到状态 28
    declaration_specifiers     转到状态 29
    storage_class_specifier    转到状态 30
    type_specifier             转到状态 31
    struct_or_union_specifier  转到状态 32
    struct_or_union            转到状态 33
    enum_specifier             转到状态 34
    type_qualifier             转到状态 35
    function_specifier         转到状态 36


State 26

    4 translation_unit: external_declaration .

    $default  reduce using rule 4 (translation_unit)


State 27

    6 external_declaration: function_definition .

    $default  reduce using rule 6 (external_declaration)


State 28

    7 external_declaration: declaration .

    $default  reduce using rule 7 (external_declaration)


State 29

    8 function_definition: declaration_specifiers . declarator compound_statement
    9                    | declaration_specifiers . declarator declaration_list compound_statement
   12 declaration: declaration_specifiers . SEMICOLON
   13            | declaration_specifiers . init_declarator_list SEMICOLON

    IDENTIFIER  shift, and go to state 41
    MUL         shift, and go to state 42
    LPAREN      shift, and go to state 43
    SEMICOLON   shift, and go to state 44

    init_declarator_list  转到状态 45
    init_declarator       转到状态 46
    declarator            转到状态 47
    direct_declarator     转到状态 48
    pointer               转到状态 49


State 30

   18 declaration_specifiers: storage_class_specifier .
   19                       | storage_class_specifier . declaration_specifiers

    TYPEDEF_NAME  shift, and go to state 1
    TYPEDEF       shift, and go to state 2
    EXTERN        shift, and go to state 3
    STATIC        shift, and go to state 4
    AUTO          shift, and go to state 5
    REGISTER      shift, and go to state 6
    INLINE        shift, and go to state 7
    CONST         shift, and go to state 8
    RESTRICT      shift, and go to state 9
    VOLATILE      shift, and go to state 10
    BOOL          shift, and go to state 11
    CHAR          shift, and go to state 12
    SHORT         shift, and go to state 13
    INT           shift, and go to state 14
    LONG          shift, and go to state 15
    SIGNED        shift, and go to state 16
    UNSIGNED      shift, and go to state 17
    FLOAT         shift, and go to state 18
    DOUBLE        shift, and go to state 19
    VOID          shift, and go to state 20
    STRUCT        shift, and go to state 21
    UNION         shift, and go to state 22
    ENUM          shift, and go to state 23

    $default  reduce using rule 18 (declaration_specifiers)

    declaration_specifiers     转到状态 50
    storage_class_specifier    转到状态 30
    type_specifier             转到状态 31
    struct_or_union_specifier  转到状态 32
    struct_or_union            转到状态 33
    enum_specifier             转到状态 34
    type_qualifier             转到状态 35
    function_specifier         转到状态 36


State 31

   14 declaration_specifiers: type_specifier .
   15                       | type_specifier . declaration_specifiers

    TYPEDEF_NAME  shift, and go to state 1
    TYPEDEF       shift, and go to state 2
    EXTERN        shift, and go to state 3
    STATIC        shift, and go to state 4
    AUTO          shift, and go to state 5
    REGISTER      shift, and go to state 6
    INLINE        shift, and go to state 7
    CONST         shift, and go to state 8
    RESTRICT      shift, and go to state 9
    VOLATILE      shift, and go to state 10
    BOOL          shift, and go to state 11
    CHAR          shift, and go to state 12
    SHORT         shift, and go to state 13
    INT           shift, and go to state 14
    LONG          shift, and go to state 15
    SIGNED        shift, and go to state 16
    UNSIGNED      shift, and go to state 17
    FLOAT         shift, and go to state 18
    DOUBLE        shift, and go to state 19
    VOID          shift, and go to state 20
    STRUCT        shift, and go to state 21
    UNION         shift, and go to state 22
    ENUM          shift, and go to state 23

    $default  reduce using rule 14 (declaration_specifiers)

    declaration_specifiers     转到状态 51
    storage_class_specifier    转到状态 30
    type_specifier             转到状态 31
    struct_or_union_specifier  转到状态 32
    struct_or_union            转到状态 33
    enum_specifier             转到状态 34
    type_qualifier             转到状态 35
    function_specifier         转到状态 36


State 32

   41 type_specifier: struct_or_union_specifier .

    $default  reduce using rule 41 (type_specifier)


State 33

   44 struct_or_union_specifier: struct_or_union . IDENTIFIER LBRACE struct_declaration_list RBRACE
   45                          | struct_or_union . LBRACE struct_declaration_list RBRACE
   46                          | struct_or_union . IDENTIFIER

    IDENTIFIER  shift, and go to state 52
    LBRACE      shift, and go to state 53


State 34

   42 type_specifier: enum_specifier .

    $default  reduce using rule 42 (type_specifier)


State 35

   20 declaration_specifiers: type_qualifier .
   21                       | type_qualifier . declaration_specifiers

    TYPEDEF_NAME  shift, and go to state 1
    TYPEDEF       shift, and go to state 2
    EXTERN        shift, and go to state 3
    STATIC        shift, and go to state 4
    AUTO          shift, and go to state 5
    REGISTER      shift, and go to state 6
    INLINE        shift, and go to state 7
    CONST         shift, and go to state 8
    RESTRICT      shift, and go to state 9
    VOLATILE      shift, and go to state 10
    BOOL          shift, and go to state 11
    CHAR          shift, and go to state 12
    SHORT         shift, and go to state 13
    INT           shift, and go to state 14
    LONG          shift, and go to state 15
    SIGNED        shift, and go to state 16
    UNSIGNED      shift, and go to state 17
    FLOAT         shift, and go to state 18
    DOUBLE        shift, and go to state 19
    VOID          shift, and go to state 20
    STRUCT        shift, and go to state 21
    UNION         shift, and go to state 22
    ENUM          shift, and go to state 23

    $default  reduce using rule 20 (declaration_specifiers)

    declaration_specifiers     转到状态 54
    storage_class_specifier    转到状态 30
    type_specifier             转到状态 31
    struct_or_union_specifier  转到状态 32
    struct_or_union            转到状态 33
    enum_specifier             转到状态 34
    type_qualifier             转到状态 35
    function_specifier         转到状态 36


State 36

   16 declaration_specifiers: function_specifier .
   17                       | function_specifier . declaration_specifiers

    TYPEDEF_NAME  shift, and go to state 1
    TYPEDEF       shift, and go to state 2
    EXTERN        shift, and go to state 3
    STATIC        shift, and go to state 4
    AUTO          shift, and go to state 5
    REGISTER      shift, and go to state 6
    INLINE        shift, and go to state 7
    CONST         shift, and go to state 8
    RESTRICT      shift, and go to state 9
    VOLATILE      shift, and go to state 10
    BOOL          shift, and go to state 11
    CHAR          shift, and go to state 12
    SHORT         shift, and go to state 13
    INT           shift, and go to state 14
    LONG          shift, and go to state 15
    SIGNED        shift, and go to state 16
    UNSIGNED      shift, and go to state 17
    FLOAT         shift, and go to state 18
    DOUBLE        shift, and go to state 19
    VOID          shift, and go to state 20
    STRUCT        shift, and go to state 21
    UNION         shift, and go to state 22
    ENUM          shift, and go to state 23

    $default  reduce using rule 16 (declaration_specifiers)

    declaration_specifiers     转到状态 55
    storage_class_specifier    转到状态 30
    type_specifier             转到状态 31
    struct_or_union_specifier  转到状态 32
    struct_or_union            转到状态 33
    enum_specifier             转到状态 34
    type_qualifier             转到状态 35
    function_specifier         转到状态 36


State 37

   62 enum_specifier: ENUM IDENTIFIER . LBRACE enumerator_list RBRACE
   64               | ENUM IDENTIFIER . LBRACE enumerator_list COMMA RBRACE
   66               | ENUM IDENTIFIER .

    LBRACE  shift, and go to state 56

    $default  reduce using rule 66 (enum_specifier)


State 38

   63 enum_specifier: ENUM LBRACE . enumerator_list RBRACE
   65               | ENUM LBRACE . enumerator_list COMMA RBRACE

    IDENTIFIER  shift, and go to state 57

    enumerator_list  转到状态 58
    enumerator       转到状态 59


State 39

    0 $accept: program $end .

    $default  接受


State 40

    5 translation_unit: translation_unit external_declaration .

    $default  reduce using rule 5 (translation_unit)


State 41

   77 direct_declarator: IDENTIFIER .

    $default  reduce using rule 77 (direct_declarator)


State 42

   89 pointer: MUL . type_qualifier_list
   90        | MUL .
   91        | MUL . type_qualifier_list pointer
   92        | MUL . pointer

    MUL       shift, and go to state 42
    CONST     shift, and go to state 8
    RESTRICT  shift, and go to state 9
    VOLATILE  shift, and go to state 10

    $default  reduce using rule 90 (pointer)

    type_qualifier       转到状态 60
    pointer              转到状态 61
    type_qualifier_list  转到状态 62


State 43

   78 direct_declarator: LPAREN . declarator RPAREN

    IDENTIFIER  shift, and go to state 41
    MUL         shift, and go to state 42
    LPAREN      shift, and go to state 43

    declarator         转到状态 63
    direct_declarator  转到状态 48
    pointer            转到状态 49


State 44

   12 declaration: declaration_specifiers SEMICOLON .

    $default  reduce using rule 12 (declaration)


State 45

   13 declaration: declaration_specifiers init_declarator_list . SEMICOLON
   23 init_declarator_list: init_declarator_list . COMMA init_declarator

    SEMICOLON  shift, and go to state 64
    COMMA      shift, and go to state 65


State 46

   22 init_declarator_list: init_declarator .

    $default  reduce using rule 22 (init_declarator_list)


State 47

    8 function_definition: declaration_specifiers declarator . compound_statement
    9                    | declaration_specifiers declarator . declaration_list compound_statement
   24 init_declarator: declarator .
   25                | declarator . ASSIGN initializer

    LBRACE        shift, and go to state 66
    ASSIGN        shift, and go to state 67
    TYPEDEF_NAME  shift, and go to state 1
    TYPEDEF       shift, and go to state 2
    EXTERN        shift, and go to state 3
    STATIC        shift, and go to state 4
    AUTO          shift, and go to state 5
    REGISTER      shift, and go to state 6
    INLINE        shift, and go to state 7
    CONST         shift, and go to state 8
    RESTRICT      shift, and go to state 9
    VOLATILE      shift, and go to state 10
    BOOL          shift, and go to state 11
    CHAR          shift, and go to state 12
    SHORT         shift, and go to state 13
    INT           shift, and go to state 14
    LONG          shift, and go to state 15
    SIGNED        shift, and go to state 16
    UNSIGNED      shift, and go to state 17
    FLOAT         shift, and go to state 18
    DOUBLE        shift, and go to state 19
    VOID          shift, and go to state 20
    STRUCT        shift, and go to state 21
    UNION         shift, and go to state 22
    ENUM          shift, and go to state 23

    $default  reduce using rule 24 (init_declarator)

    declaration_list           转到状态 68
    declaration                转到状态 69
    declaration_specifiers     转到状态 70
    storage_class_specifier    转到状态 30
    type_specifier             转到状态 31
    struct_or_union_specifier  转到状态 32
    struct_or_union            转到状态 33
    enum_specifier             转到状态 34
    type_qualifier             转到状态 35
    function_specifier         转到状态 36
    compound_statement         转到状态 71

